package com.ramlawi.notes.core.util

/**
 * Created by Mohammed Alramlawi on 1/22/2022.
 */

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FILED = "TITLE_TEXT_FILED"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
}